Web Inspector: Fix spacing of FindBanner prev/next buttons https://bugs.webkit.org/show_bug.cgi?id=149717
Patch by Devin Rousso <dcrousso+webkit@gmail.com> on 2015-10-06
Reviewed by Darin Adler.

The sizing and spacing of the previous and next buttons in the FindBanner
is slightly off and should be readjusted to ensure that both buttons are
the same size and have the same spacing.

* UserInterface/Views/FindBanner.css:
(.find-banner > button.segmented.right > .glyph):
(.find-banner > button.segmented):
(.find-banner > button.segmented > .glyph):
(.find-banner > button.segmented.left): Deleted.
(.find-banner > button.segmented.left > .glyph): Deleted.
(.find-banner > button.segmented.right): Deleted.

Canonical link: https://commits.webkit.org/167985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190640 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/FindBanner.css
+++ b/Source/WebInspectorUI/UserInterface/Views/FindBanner.css
@@ -143,17 +143,11 @@ body.window-inactive .find-banner {
 .find-banner > button.segmented.left {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-
     margin-right: 0;
-
-    padding-left: 6px;
-    padding-right: 6px;
 }
 
 .find-banner > button.segmented.left > .glyph {
     background-image: -webkit-canvas(find-banner-previous-arrow-normal);
-    background-size: 7px 11px;
-    background-repeat: no-repeat;
 }
 
 .find-banner > button.segmented.left:active:not(:disabled) > .glyph {
@@ -163,17 +157,12 @@ body.window-inactive .find-banner {
 .find-banner > button.segmented.right {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-
     margin-left: -1px;
-
-    padding-left: 5px;
-    padding-right: 7px;
 }
 
 .find-banner > button.segmented.right > .glyph {
     background-image: -webkit-canvas(find-banner-next-arrow-normal);
-    background-size: 7px 11px;
-    background-repeat: no-repeat;
+    margin-left: 1px;
 }
 
 .find-banner > button.segmented.right:active:not(:disabled) > .glyph {
@@ -182,8 +171,12 @@ body.window-inactive .find-banner {
 
 .find-banner > button.segmented {
     min-width: 22px;
-    padding-top: 3px;
-    padding-bottom: 2px;
+    padding: 3px 6px 2px;
+}
+
+.find-banner > button.segmented > .glyph {
+    background-size: 7px 11px;
+    background-repeat: no-repeat;
 }
 
 .find-banner > button.segmented:active {
